# team-builder-api

./: README.md  pyproject.toml
team_builder_api/: scripts.py
team_builder_api/app/: main.py
team_builder_api/app/api/: generate.py  test.py
